syntax= "proto3";

package averagecalculator ;

option go_package ="github.com/AdekunleDally/grpc-client-streaming-api/averagecalculator/proto" ;

message  NumberRequest{
    double input_number = 1  ;
}

message AverageResponse {
    double avr_result = 1;
}

service AverageService{
    rpc AverageCalc(stream NumberRequest) returns (AverageResponse); 
}
